Bug 15730 - VFS_OPEN_HOW_WITH_BACKUP_INTENT breaks shadow_copy2
Summary: VFS_OPEN_HOW_WITH_BACKUP_INTENT breaks shadow_copy2
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: VFS Modules (show other bugs)
Version: 4.20.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-10-01 20:29 UTC by Christof Schmitt
Modified: 2024-11-19 14:48 UTC (History)
1 user (show)

See Also:


Attachments
patch for 4.20 (1.39 KB, patch)
2024-10-02 14:21 UTC, Christof Schmitt
vl: review+
Details
patch for 4.21 (1.39 KB, patch)
2024-10-02 15:16 UTC, Christof Schmitt
vl: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Christof Schmitt 2024-10-01 20:29:21 UTC
Samba 4.20 includes the commit
d1846452e96 vfs: Add VFS_OPEN_HOW_WITH_BACKUP_INTENT
which triggers a check in shadow_copy2_openat and prevents the file from being opened
if the CREATE is done with BACKUP_INTENT.

Patch to follow.
Comment 1 Christof Schmitt 2024-10-02 03:58:57 UTC
https://gitlab.com/samba-team/samba/-/merge_requests/3825
Comment 2 Samba QA Contact 2024-10-02 08:07:04 UTC
This bug was referenced in samba master:

30b0fa892ad66bfad92403186f97fd46496e62de
Comment 3 Christof Schmitt 2024-10-02 14:21:50 UTC
Created attachment 18460 [details]
patch for 4.20
Comment 4 Volker Lendecke 2024-10-02 14:41:52 UTC
Comment on attachment 18460 [details]
patch for 4.20

Is this only for 4.20, or is 4.21 also affected?
Comment 5 Christof Schmitt 2024-10-02 15:16:53 UTC
Created attachment 18461 [details]
patch for 4.21
Comment 6 Christof Schmitt 2024-10-02 15:17:20 UTC
It affects 4.21 as well, i missed that at first.
Comment 7 Jule Anger 2024-10-04 08:01:31 UTC
Pushed to autobuild-v4-{21,20}-test.
Comment 8 Samba QA Contact 2024-10-04 10:14:03 UTC
This bug was referenced in samba v4-21-test:

8fa36e029bd6c7a1a17469a2bece8904610ee075
Comment 9 Samba QA Contact 2024-10-04 12:56:04 UTC
This bug was referenced in samba v4-20-test:

165149da928e2fdc10f92e4fa52f3af787fe929d
Comment 10 Jule Anger 2024-10-07 08:24:25 UTC
Closing out bug report.

Thanks!
Comment 11 Samba QA Contact 2024-10-14 11:33:38 UTC
This bug was referenced in samba v4-21-stable (Release samba-4.21.1):

8fa36e029bd6c7a1a17469a2bece8904610ee075
Comment 12 Samba QA Contact 2024-11-19 14:48:18 UTC
This bug was referenced in samba v4-20-stable (Release samba-4.20.6):

165149da928e2fdc10f92e4fa52f3af787fe929d